cluster-init/argoproj/argocd/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-grpc
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.staging.schouten-lebbing.nl`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          weight: 10
          scheme: h2c
  tls:
    secretName: ""
